@@ -31,9 +31,9 @@
 
 
 <!-- ###INVITE_MESSAGE### begin -->
-
+<div class="###MESSAGE_CLASS###">
 	###MESSAGE###
-
+</div>
 <!-- ###INVITE_MESSAGE### end -->
 
 </body>
