@@ -1,3 +1,7 @@
+2009-02-19 Frank Nägler <typo3@naegler.net>
+	
+	* added new marker ###MESSAGE_CLASS### to tx_community_view_invite_Message
+
 2009-02-18 Frank Nägler <typo3@naegler.net>
 	
 	* added hook and interface to inviteApplication for additional markers in the invite email
